[workspace]
[workspace.package]
edition = "2021"
authors = ["boykush <boykush315@gmail.com>"]
license = "MIT"
version = "0.27.2"
description = "Scraps is a portable CLI knowledge hub for managing interconnected Markdown documentation with Wiki-link notation."
homepage = "https://boykush.github.io/scraps"
repository = "https://github.com/boykush/scraps"
documentation = "https://boykush.github.io/scraps"
rust-version = "1.88"
[workspace.dependencies.scraps_libs]
version = "0.27.2"
path = "modules/libs"
[workspace.dependencies]
anyhow = "=1.0.100"
thiserror = "=2.0.17"
url = { version = "=2.5.7", features = ["serde"] }
itertools = "=0.14.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
toml = "=0.9.10"
rayon = "=1.11.0"
clap = { version = "=4.5.53", features = ["derive"] }
config = { version = "=0.15.19", features = ["toml"] }
tera = "=1.20.1"
once_cell = "=1.21.3"
chrono-tz = { version = "=0.10.4", features = ["serde"] }
colored = "=3.0.0"
hyper = { version = "=1.8.1", features = ["full"] }
tokio = { version = "=1.48.0", features = ["full"] }
http-body-util = "=0.1.3"
hyper-util = { version = "=0.1.19", features = ["full"] }
percent-encoding = "=2.3.2"
tracing = "=0.1.43"
tracing-subscriber = "=0.3.22"
clap-verbosity-flag = "=3.0.4"
rmcp = { version = "=0.11.0", features = ["server"] }
schemars = "=1.1.0"

[package]
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
name = "scraps"
readme = "README.md"
exclude = [
    "scraps/",
    ".github/",
    "Dockerfile",
    "assets/"
]
[dependencies]
# sub crates
scraps_libs.workspace = true
scraps_libs.features = ["git", "lang", "markdown", "model", "search", "slugify"]
#external crates
url.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rayon.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
config.workspace = true
tera.workspace = true
once_cell.workspace = true
chrono-tz.workspace = true
colored.workspace = true
hyper.workspace = true
tokio.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
percent-encoding.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap-verbosity-flag.workspace = true
rmcp.workspace = true
schemars.workspace = true

[dev-dependencies]
scraps_libs.workspace = true
scraps_libs.features = ["git_test", "test_supports"]
