[workspace]
[workspace.package]
edition = "2021"
authors = ["boykush <boykush315@gmail.com>"]
license = "MIT"
version = "0.33.0"
description = "Scraps is a portable CLI knowledge hub for managing interconnected Markdown documentation with Wiki-link notation."
homepage = "https://boykush.github.io/scraps"
repository = "https://github.com/boykush/scraps"
documentation = "https://boykush.github.io/scraps"
rust-version = "1.92"
[workspace.dependencies.scraps_libs]
version = "0.33.0"
path = "modules/libs"
[workspace.dependencies]
anyhow = "=1.0.102"
thiserror = "=2.0.18"
url = { version = "=2.5.8", features = ["serde"] }
itertools = "=0.14.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
toml = "=1.1.2"
rayon = "=1.12.0"
clap = { version = "=4.6.0", features = ["derive", "env"] }
config = { version = "=0.15.22", features = ["toml"] }
tera = "=1.20.1"
once_cell = "=1.21.4"
chrono-tz = { version = "=0.10.4", features = ["serde"] }
colored = "=3.1.1"
hyper = { version = "=1.9.0", features = ["full"] }
tokio = { version = "=1.52.1", features = ["full"] }
http-body-util = "=0.1.3"
hyper-util = { version = "=0.1.20", features = ["full"] }
percent-encoding = "=2.3.2"
tracing = "=0.1.44"
tracing-subscriber = "=0.3.23"
clap-verbosity-flag = "=3.0.4"
indicatif = "=0.18.4"
rmcp = { version = "=1.5.0", features = ["server"] }
schemars = "=1.2.1"
rstest = "=0.26.1"
tempfile = "=3.27.0"
tokio-util = "=0.7.18"
futures = "=0.3.32"
annotate-snippets = "=0.11.5"
comfy-table = { version = "=7.2.2", features = ["custom_styling"] }

[package]
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
name = "scraps"
readme = "README.md"
include = [
    "src/",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE.md"
]
[dependencies]
# sub crates
scraps_libs.workspace = true
scraps_libs.features = ["git", "html", "lang", "markdown", "model", "search", "slugify"]
#external crates
url.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rayon.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
config.workspace = true
tera.workspace = true
once_cell.workspace = true
chrono-tz.workspace = true
colored.workspace = true
hyper.workspace = true
tokio.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
percent-encoding.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap-verbosity-flag.workspace = true
indicatif.workspace = true
rmcp.workspace = true
schemars.workspace = true
annotate-snippets.workspace = true
comfy-table.workspace = true

[dev-dependencies]
scraps_libs.workspace = true
scraps_libs.features = ["git_test"]
rstest.workspace = true
tempfile.workspace = true
rmcp = { workspace = true, features = ["client", "server", "transport-async-rw"] }
tokio-util.workspace = true
futures.workspace = true
