[package]
name = "scraps_libs"
edition = "2021"
version = "0.23.3"
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
url.workspace = true
itertools.workspace = true
pulldown-cmark.workspace = true

[features]
error = []
git = []
git_test = []
markdown = []
model = []
slugify = []
test_supports = []