[package]
name = "scraps_libs"
edition = "2021"
version = "0.24.2"
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
url.workspace = true
itertools.workspace = true
pulldown-cmark.workspace = true
iso639-1.workspace = true
fuzzy-matcher = { version = "0.3", optional = true }

[features]
error = []
git = []
git_test = []
lang = []
markdown = []
model = []
search = ["fuzzy-matcher"]
slugify = []
test_supports = []