[package]
name = "scraps_libs"
edition = "2021"
version = "0.30.0"
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
url.workspace = true
itertools.workspace = true
pulldown-cmark = "=0.13.0"
iso639_enum = "=0.6.0"
fuzzy-matcher = { version = "=0.3.7", optional = true }

[dev-dependencies]
rstest.workspace = true

[features]
error = []
git = []
git_test = []
lang = []
markdown = []
model = []
search = ["fuzzy-matcher"]
slugify = []